# LossRider

./: .gitignore  LICENSE  README.md  lossrider.py  pyproject.toml
examples/: example.ipynb
examples/_data/: fp8_df.csv  sweep_df.csv  transfer_df.csv
examples/maps/: loss_curve.json  sweep_strategies.json  width_transfer.json
src/lossrider/: __init__.py  lossridersrc.py
