[project]
name = "lossrider"
version = "0.0.1"
authors = [
  { name="Josef Dean", email="email@josefdean.co.uk" },
]
description = "A plotting library that create Line Rider maps"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/jndean/LossRider"

